Second attempt at Hangman

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,8 @@
 
 body {
     background:url("../images/fish.jpg");
-
-    margin:75px;
-    padding:75px;
+/*    margin:40px;
+    padding:70px;*/
 
 }
 
@@ -70,11 +69,18 @@ h2 {
     color: #4aaaa5;
     background-color: #ffffff;
 }
+h3 {
+   font-family: 'Roboto Mono', monospace;
+    font-size: 50px;
+    color: #ffffff;
+    text-shadow:2px 2px #ff0000; 
+}
 p {
-    text-align: left;
+    text-align: center;
     font-family: 'Roboto Mono', monospace;
-    font-size: 16px;
-    color: #777777;
+    font-size: 40px;
+    color: #ffffff;
+    text-shadow: 2px 2px #ff0000;    
 }
 button {
     background-color: #4aaaa5;
@@ -100,7 +106,7 @@ h3 {
 }
 div {
     text-align: center;
-    font-size: 100px;
+    font-size: 50px;
     font-family: 'Roboto Mono', monospace;   
     color: #ffffff;
     text-shadow: 2px 2px #ff0000; 
