--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@ h1, h2, h3 {
    margin-bottom: 5px;
 }
 
+h4 {
+  font-size: 2.6em,
+  color: #525050;
+}
+
 h1 {
   font-size: 2.6em;
   color: #525050;
@@ -72,25 +77,6 @@ p{
     -khtml-border-radius: 5px;
     border: solid 1px #fff;
 }
-/*#alphabet li {
-  float:left;
-  margin: 0 10px 10px 0;
-  list-style:none;
-  width:35px;
-  height:30px;
-  padding-top:10px;
-  background:$white;
-  color:$base-color;
-  cursor:pointer;
-  @include corners(5px);
-  border: solid 1px $white;
-    
-    &:hover{
-      background:color;
-      border: solid 1px $white;
-      color:$white;
-    }
-}*/
 
 .jumbotron {
   background-color: #525050;
@@ -137,7 +123,7 @@ footer {
       background-attachment: initial;
       background-origin: initial;
       background-clip: initial;
-        background-color: white;
+      background-color: white;
   background: #E5F9BD;
   color: #c1d72e;
   cursor: pointer;
